--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a:hover{
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    /*background-color: white; */
     width: fit-content;
     max-height: 0;
     overflow: hidden;
